cmake_minimum_required(VERSION 3.6)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp)
set(1FILE 2sum.cpp)
set(2FILE add_two_num.cpp)
set(3FILE longest_substring_without_repeating_char.cpp)
set(7FILE reverse_integer.cpp)
set(344FILE reverse_string.cpp)
set(15FILE threesum.cpp)
set(235FILE lowest_common_ancestor_of_bst.cpp)
set(206FILE reverse_linked_list.cpp)
add_executable(leetcode ${SOURCE_FILES})
add_executable(2sum ${1FILE})
add_executable(add_two_num ${2FILE})
add_executable(longest_substring_without_repeating_char ${3FILE})
add_executable(sum_three ${15FILE})
add_executable(lca_of_bst ${235FILE})
add_executable(reverse_linked_list ${206FILE})
#add_executable(reverse_integer ${7FILE})
#add_executable(reverse_string ${344FILE})
