cmake_minimum_required(VERSION 3.6)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp)
set(1FILE 2sum.cpp)
set(2FILE add_two_num.cpp)
set(3FILE longest_substring_without_repeating_char.cpp)
set(7FILE reverse_integer.cpp)
set(344FILE reverse_string.cpp)
set(15FILE threesum.cpp)
set(235FILE lowest_common_ancestor_of_bst.cpp)
set(206FILE reverse_linked_list.cpp)
set(92FILE reverse_linked_list2.cpp)
set(14FILE longest_common_prefix.cpp)
set(236FILE lowest_common_ancestor_of_binary_tree.cpp)
set(226FILE invert_binary_tree.cpp)
set(77FILE combinations.cpp)
set(32FILE longest_valid_parentheses.cpp)
set(20FILE valid_parentheses.cpp)
set(121FILE best_time_buy_sell_stock.cpp)
set(122FILE best_time_buy_sell_stock_2.cpp)
set(123FILE best_time_buy_sell_stock_3.cpp)
set(188FILE best_time_buy_sell_stock_4.cpp)
set(309FILE best_time_buy_sell_stock_cooldown.cpp)
set(22FILE generate_parentheses.cpp)
set(9FILE palindrome_number.cpp)
set(8FILE atoi.cpp)
set(21FILE merge_sorted_lists.cpp)
set(26FILE remove_duplicate_from_sorted_array.cpp)
set(27FILE remove_element.cpp)
set(13FILE roman_to_integer.cpp)
set(28FILE str_str.cpp)
set(kmp kmp.cpp)
set(35FILE search_insert_position.cpp)
set(38FILE count_say.cpp)
set(53FILE maximum_subarray.cpp)
set(70FILE climbing_stairs.cpp)
set(69FILE sqrt.cpp)
set(67FILE add_binary.cpp)
set(66FILE plus_one.cpp)
set(58FILE length_of_last_word.cpp)
set(88FILE merge_sorted_array.cpp)
set(100FILE same_tree.cpp)
set(101FILE symmetric_tree.cpp)
set(107FILE binary_tree_level_order_traversal_2.cpp)
set(108FILE sorted_array_2_bst.cpp)
add_executable(leetcode ${SOURCE_FILES})
add_executable(2sum ${1FILE})
add_executable(add_two_num ${2FILE})
add_executable(longest_substring_without_repeating_char ${3FILE})
add_executable(sum_three ${15FILE})
add_executable(lca_of_bst ${235FILE})
add_executable(reverse_linked_list ${206FILE})
add_executable(reverse_linked_list2 ${92FILE})
add_executable(longest_common_prefix ${14FILE})
add_executable(lowest_common_ancestor_of_bst ${235FILE})
add_executable(lowest_common_ancestor_of_binary_tree ${236FILE})
add_executable(invert_binary_tree ${226FILE})
add_executable(combinations ${77FILE})
add_executable(longest_valid_parentheses ${32FILE})
add_executable(valid_parentheses ${20FILE})
add_executable(best_time_buy_sell_stock ${121FILE})
add_executable(best_time_buy_sell_stock_2 ${122FILE})
add_executable(best_time_buy_sell_stock_3 ${123FILE})
add_executable(best_time_buy_sell_stock_4 ${188FILE})
add_executable(best_time_buy_sell_stock_cooldown ${309FILE})
add_executable(generate_parentheses ${22FILE})
add_executable(palindrome_number ${9FILE})
add_executable(atoi ${8FILE})
add_executable(merge_sorted_lists ${21FILE})
add_executable(remove_duplicate_from_sorted_array ${26FILE})
add_executable(remove_element ${27FILE})
add_executable(roman_to_integer ${13FILE})
add_executable(str_str ${28FILE})
add_executable(kmp ${kmp})
add_executable(search_insert_position ${35FILE})
add_executable(count_say ${38FILE})
add_executable(maximum_subarray ${53FILE})
add_executable(climbing_stairs ${70FILE})
add_executable(sqrt ${69FILE})
add_executable(add_binary ${67FILE})
add_executable(plus_one ${66FILE})
add_executable(length_of_last_word ${58FILE})
add_executable(merge_sorted_array ${88FILE})
add_executable(same_tree ${100FILE})
add_executable(symmetric_tree ${101FILE})
add_executable(binary_tree_level_order_traversal_2 ${107FILE})
add_executable(sorted_array_2_bst ${108FILE})
#add_executable(reverse_integer ${7FILE})
#add_executable(reverse_string ${344FILE})
