cmake_minimum_required(VERSION 3.6)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp)
set(ali ali_solution.cpp)
set(1FILE 2sum.cpp)
set(2FILE add_two_num.cpp)
set(3FILE longest_substring_without_repeating_char.cpp)
set(7FILE reverse_integer.cpp)
set(344FILE reverse_string.cpp)
set(15FILE threesum.cpp)
set(235FILE lowest_common_ancestor_of_bst.cpp)
set(206FILE reverse_linked_list.cpp)
set(92FILE reverse_linked_list2.cpp)
set(14FILE longest_common_prefix.cpp)
set(236FILE lowest_common_ancestor_of_binary_tree.cpp)
set(226FILE invert_binary_tree.cpp)
set(77FILE combinations.cpp)
set(32FILE longest_valid_parentheses.cpp)
set(20FILE valid_parentheses.cpp)
set(121FILE best_time_buy_sell_stock.cpp)
set(122FILE best_time_buy_sell_stock_2.cpp)
set(123FILE best_time_buy_sell_stock_3.cpp)
set(188FILE best_time_buy_sell_stock_4.cpp)
set(309FILE best_time_buy_sell_stock_cooldown.cpp)
set(22FILE generate_parentheses.cpp)
set(9FILE palindrome_number.cpp)
set(8FILE atoi.cpp)
set(21FILE merge_sorted_lists.cpp)
set(26FILE remove_duplicate_from_sorted_array.cpp)
set(27FILE remove_element.cpp)
set(13FILE roman_to_integer.cpp)
set(28FILE str_str.cpp)
set(kmp kmp.cpp)
set(35FILE search_insert_position.cpp)
set(38FILE count_say.cpp)
set(53FILE maximum_subarray.cpp)
set(70FILE climbing_stairs.cpp)
set(69FILE sqrt.cpp)
set(67FILE add_binary.cpp)
set(66FILE plus_one.cpp)
set(58FILE length_of_last_word.cpp)
set(88FILE merge_sorted_array.cpp)
set(100FILE same_tree.cpp)
set(101FILE symmetric_tree.cpp)
set(107FILE binary_tree_level_order_traversal_2.cpp)
set(108FILE sorted_array_2_bst.cpp)
set(110FILE balanced_binary_tree.cpp)
set(111FILE min_depth_of_binary_tree.cpp)
set(112FILE path_sum)
set(118FILE pascal_triangle.cpp)
set(119FILE pascal_triangle_2.cpp)
set(125FILE valid_palindrome.cpp)
set(136FILE single_number.cpp)
set(141FILE linked_list_cycle.cpp)
set(160FILE intersection_of_two_linked_lists.cpp)
set(168FILE excel_sheet_column_title.cpp)
set(172FILE factorial_trailing_zeroes.cpp)
set(189FILE rotate_array.cpp)
set(191FILE number_of_1_bits.cpp)
set(198FILE house_robber.cpp)
set(202FILE happy_number.cpp)
set(203FILE remove_linked_list_elements.cpp)
set(204FILE count_primes.cpp)
set(205FILE isomorphic_strings.cpp)
set(219FILE contain_duplicate_2.cpp)
set(224FILE basic_calculator.cpp)
set(232FILE implement_queue_using_stacks.cpp)
set(231FILE power_of_two.cpp)
set(225FILE implement_stack_using_queues.cpp)
set(234FILE palindrome_linked_list.cpp)
set(237FILE delete_node_in_a_linked_list.cpp)
set(258FILE add_digits.cpp)
set(263FILE ugly_number.cpp)
set(268FILE missing_number.cpp)
set(283FILE move_zeroes.cpp)
set(278FILE first_bad_version.cpp)
set(bs binary_search.cpp)
set(290FILE word_pattern.cpp)
set(342FILE power_of_three.cpp)
set(345FILE reverse_vowels_of_a_string.cpp)
set(349FILE intersection_of_two_arrays.cpp)
set(350FILE intersection_of_two_arrays_2.cpp)
set(383FILE ransom_note.cpp)
set(387FILE first_unique_character_in_a_string.cpp)
set(389FILE find_the_difference.cpp)
set(404FILE sum_of_left_leaves.cpp)
set(409FILE longest_palindrome.cpp)
set(412FILE fizz_buzz.cpp)
set(414FILE third_maximum_number.cpp)
set(215FILE kth_largest_element_in_an_array.cpp)
set(347FILE top_k_frequent_elements.cpp)
set(451FILE sort_characters_by_frequency.cpp)
set(415FILE add_strings.cpp)
set(434FILE number_of_segments_in_a_string.cpp)
set(437FILE path_sum_3.cpp)
set(438FILE find_all_anagrams_in_a_string.cpp)
set(441FILE arranging_coins.cpp)
set(447FILE number_of_boomerangs.cpp)
set(448FILE find_all_numbers_disappeared_in_an_array.cpp)
set(442FILE find_all_duplicates_in_a_array.cpp)
set(4FILE median_of_two_sorted_arrays.cpp)
add_executable(leetcode ${SOURCE_FILES})
add_executable(2sum ${1FILE})
add_executable(add_two_num ${2FILE})
add_executable(longest_substring_without_repeating_char ${3FILE})
add_executable(sum_three ${15FILE})
add_executable(lca_of_bst ${235FILE})
add_executable(reverse_linked_list ${206FILE})
add_executable(reverse_linked_list2 ${92FILE})
add_executable(longest_common_prefix ${14FILE})
add_executable(lowest_common_ancestor_of_bst ${235FILE})
add_executable(lowest_common_ancestor_of_binary_tree ${236FILE})
add_executable(invert_binary_tree ${226FILE})
add_executable(combinations ${77FILE})
add_executable(longest_valid_parentheses ${32FILE})
add_executable(valid_parentheses ${20FILE})
add_executable(best_time_buy_sell_stock ${121FILE})
add_executable(best_time_buy_sell_stock_2 ${122FILE})
add_executable(best_time_buy_sell_stock_3 ${123FILE})
add_executable(best_time_buy_sell_stock_4 ${188FILE})
add_executable(best_time_buy_sell_stock_cooldown ${309FILE})
add_executable(generate_parentheses ${22FILE})
add_executable(palindrome_number ${9FILE})
add_executable(atoi ${8FILE})
add_executable(merge_sorted_lists ${21FILE})
add_executable(remove_duplicate_from_sorted_array ${26FILE})
add_executable(remove_element ${27FILE})
add_executable(roman_to_integer ${13FILE})
add_executable(str_str ${28FILE})
add_executable(kmp ${kmp})
add_executable(search_insert_position ${35FILE})
add_executable(count_say ${38FILE})
add_executable(maximum_subarray ${53FILE})
add_executable(climbing_stairs ${70FILE})
add_executable(sqrt ${69FILE})
add_executable(add_binary ${67FILE})
add_executable(plus_one ${66FILE})
add_executable(length_of_last_word ${58FILE})
add_executable(merge_sorted_array ${88FILE})
add_executable(same_tree ${100FILE})
add_executable(symmetric_tree ${101FILE})
add_executable(binary_tree_level_order_traversal_2 ${107FILE})
add_executable(sorted_array_2_bst ${108FILE})
add_executable(balanced_binary_tree ${110FILE})
add_executable(min_depth_of_binary_tree ${111FILE})
add_executable(path_sum ${112FILE})
add_executable(pascal_triangle ${118FILE})
add_executable(pascal_triangle_2 ${119FILE})
add_executable(valid_palindrome ${125FILE})
add_executable(single_number ${136FILE})
add_executable(linked_list_cycle ${141FILE})
add_executable(intersection_of_two_linked_lists ${160FILE})
add_executable(excel_sheet_column_title ${168FILE})
add_executable(factorial_trailing_zeroes ${172FILE})
add_executable(rotate_array ${189FILE})
add_executable(number_of_1_bits ${191FILE})
add_executable(house_robber ${198FILE})
add_executable(happy_number ${202FILE})
add_executable(remove_linked_list_elements ${203FILE})
add_executable(count_primes ${204FILE})
add_executable(isomorphic_strings ${205FILE})
add_executable(contain_duplicate_2 ${219FILE})
add_executable(basic_calculator ${224FILE})
add_executable(implement_queue_using_stacks ${232FILE})
add_executable(power_of_two ${231FILE})
add_executable(implement_stack_using_queues ${225FILE})
add_executable(palindrome_linked_list ${234FILE})
add_executable(delete_node_in_a_linked_list ${237FILE})
add_executable(add_digits ${258FILE})
add_executable(ugly_number ${263FILE})
add_executable(missing_number ${268FILE})
add_executable(move_zeroes ${283FILE})
add_executable(first_bad_version ${278FILE})
add_executable(binary_search ${bs})
add_executable(word_pattern ${290FILE})
add_executable(ali_solution ${ali})
add_executable(power_of_three ${342FILE})
add_executable(reverse_vowels_of_a_string ${345FILE})
add_executable(intersection_of_two_arrays ${349FILE})
add_executable(intersection_of_two_arrays_2.cpp ${350FILE})
add_executable(ransom_note.cpp ${383FILE})
add_executable(first_unique_character_in_a_string ${387FILE})
add_executable(find_the_difference ${389FILE})
add_executable(sum_of_left_leaves ${404FILE})
add_executable(longest_palindrome ${409FILE})
add_executable(fizz_buzz ${412FILE})
add_executable(third_maximum_number ${414FILE})
add_executable(kth_largest_element_in_an_array ${215FILE})
add_executable(top_k_frequent_elements ${347FILE})
add_executable(sort_characters_by_frequency ${451FILE})
add_executable(add_strings ${415FILE})
add_executable(number_of_segments_in_a_string ${434FILE})
add_executable(path_sum_3 ${437FILE})
add_executable(find_all_anagrams_in_a_string ${438FILE})
add_executable(arranging_coins ${441FILE})
add_executable(number_of_boomerangs ${447FILE})
add_executable(find_all_numbers_disappeared_in_an_array ${448FILE})
add_executable(find_all_duplicates_in_a_array ${442FILE})
add_executable(median_of_two_sorted_arrays ${4FILE})
#add_executable(reverse_integer ${7FILE})
#add_executable(reverse_string ${344FILE})
